Mobile Menu fixed Positioning

--- a/css/style.sass
+++ b/css/style.sass
@@ -96,6 +96,8 @@ header
         color: $VeryDarkViolett
         font-size: 25px
         position: absolute
+        right: 15px
+        top: 20px
     &_panel
         background-color: #3b3054
         padding: 25px 40px 10px 40px
