--- a/css/style.sass
+++ b/css/style.sass
@@ -341,6 +341,7 @@ main
         background-color: $cyan
         color: white
         font-weight: 700
+        margin-left: 5px
         cursor: pointer
         font-size: 16px
         +tablet
@@ -350,6 +351,26 @@ main
 
         &:hover
             background-color: #9be3e2
+
+    .btn-danger 
+        width: 10%
+        height: 50px
+        border-radius: 9px
+        border: none
+        background-color: darkred
+        color: white
+        font-weight: 700
+        cursor: pointer
+        font-size: 16px
+        margin-left: 5px
+        +tablet
+            width: 30%
+            margin-top: 10px
+        +mobile
+            width: 100%
+        &:hover
+            background-color: #9be3e2
+
     
         
 
